# AGL_CES2020

./: LICENSE  README.md
addons/host/etc/lxc/: runlxc.conf
addons/host/etc/systemd/system/weston.service.d/: lxc-net.conf
addons/host/home/0/: setup_unicens.sh  wireplumber.conf
addons/host/lib/systemd/system/: lxc-launcher.service  lxc-watchdog-system.service  lxc-watchdog.service  weston.service
addons/ivi/usr/AGL/apps/autoinstall/: bomb-ic.wgt
addons/ivi/usr/AGL/apps/manualinstall/: bomb-ivi.wgt
lxc-launcher/: CMakeLists.txt
lxc-launcher/src/: ilm_control.cpp  runlxc.cpp  runlxc.hpp
